<resources>
    <string name="app_name">Test Screen</string>
    <string name="send_placeholder">Enter Your Message Here</string>
    <string name="send_button">Send</string>
    <string name="count_init">0</string>
    <string name="random_heading">Here is a random number between 0 and %1d</string>
    <string name="toast_button">Toast</string>
    <string name="random_button">Random</string>
    <string name="count_button">Count</string>
    <string name="toast_message">Hello Toast!</string>
    <string name="zero_button">Zero</string>
    <string name="article_title">Beatles Anthology Vol. 1</string>
    <string name="article_subtitle">Behind That Locked Door: Beatles Rarities!</string>
    <string name="article_text">In a vault deep inside Abbey Road Studios in London — protected by an unmarked, triple-locked, police-alarmed door — are something like 400 hours of unreleased Beatles recordings, starting from June 2, 1962 and ending with the very last tracks recorded for the <i>Let It Be</i> album. The best of the best were released by Apple Records in the form of the 3-volume Anthology series.
        For more information, see the Beatles Time Capsule at www.rockument.com.
\n\n
This volume starts with the first new Beatle song, “Free as a Bird” (based on a John Lennon demo, found only on <i>The Lost Lennon Tapes Vol. 28</i>, and covers the very earliest historical recordings, outtakes from the first albums, and live recordings from early concerts and BBC Radio sessions.
\n\n
<b>Highlights include:</b>
\n\n
<b><i>Cry for a Shadow</i></b> - Many a Beatle fanatic started down the outtake road, like I did, with a first listen to this song. Originally titled “Beatle Bop” and recorded in a single session that yielded four songs (the other three featured Tony Sheridan with the Beatles as a backing band), “Cry for a Shadow” is an instrumental written by Lennon and Harrison, which makes it unique to this day. John Lennon plays rhythm guitar, George Harrison plays lead guitar, Paul McCartney plays bass, and Pete Best plays drums. The sessions were produced by Bert Kaempfert in Hamburg, Germany, during the Beatles’ second visit from April through July of 1961 to play in the Reeperbahn-section clubs.
\n\n
<b><i>My Bonnie</i></b> and <b><i>Ain’t She Sweet</i></b> — At the same session, the Beatles played on “My Bonnie” (the first-ever single with Beatles playing), as the backing band for English singer Tony Sheridan, originally a member of the Jets. The popularity of this single in Liverpool brought the Beatles to the attention of Brian Epstein, who worked in the NEMS record store and tried to meet demand for the disc. John Lennon then sings a fine “Ain’t She Sweet” (his first-ever released vocal).
\n\n
<b><i>Searchin</i></b> — A Jerry Leiber - Mike Stoller comedy song that was a hit for the Coasters in 1957, and a popular live favorite of the Beatles. The Coasters also had a hit with “Besame Mucho” and the Beatles covered that song as well. Ringo Starr had by now replaced Pete Best on drums. The high falsetto is George, who also plays a hesitant lead guitar. This is from their first audition for Decca Records in London on Jan 1., 1962, live in the studio. The Grateful Dead would later cover “Searchin” with a similar arrangement, Pigpen doing the Paul vocals. A live version is available on outtake records featuring the Dead joined by the Beach Boys!
\n\n
<b><i>Love Me Do</i></b> — An early version of the song, played a bit slower and with more of a blues feeling, and a cool bossa-nova beat in middle. Paul had to sing while John played harmonica — a first for the group. Pete Best played drums on this version.
\n\n
<b><i>She Loves You – Till There Was You – Twist and Shout</i></b> — Live at the Princess Wales Theatre by Leicester Square in London, attended by the Queen. “Till There Was You” (by Meredith Wilson) is from the musical The Music Man and a hit for Peggy Lee in 1961. Before playing it, Paul said it was recorded by his favorite American group, “Sophie Tucker” (which got some laughs). At the end, John tells the people in the cheaper seats to clap their hands, and the rest to “rattle your jewelry” and then announces “Twist and Shout” (a song by Bert Russell and Phil Medley that was first recorded in 1962 by the Isley Brothers). A film of the performance shows the Queen smiling at John’s remark.
\n\n
<b><i>Leave My Kitten Alone</i></b> — One of the lost Beatle songs recorded during the “Beatles For Sale” sessions but never released. This song, written by Little Willie John, Titus Turner, and James McDougal, was a 1959 R&amp;B hit for Little Willie John and covered by Johnny Preston before the Beatles tried it and shelved it. A reference to a “big fat bulldog” may have influenced John’s “Hey Bulldog” (Yellow Submarine album), which is a similar rocker.
\n\n
<b><i>One After 909</i></b> — A song recorded for the <i>Let It Be</i> album was actually worked on way back in the beginning, six years earlier. This take shows how they did it much more slowly, with an R&amp;B feel to it.</string>
    <string name="action_settings">Settings</string>
    <string name="display_message_activity_name">Display Message Screen</string>
    <string name="header_text">Message Received</string>
    <string name="reply_button">Reply</string>
    <string name="reply_placeholder">Enter Your Reply Here</string>
    <string name="reply_header_text">Reply Received</string>
    <string name="scroll_horizontal_button">Scroll Horizontal</string>
    <string name="scroll_vertical_button">Scroll Vertical</string>
    <string name="hello_button">Say Hello</string>
    <string name="hello_text">Hello!</string>
    <string name="add_item_button">Add Item</string>
    <string name="cheese_button">Cheese</string>
    <string name="rice_button">Rice</string>
    <string name="apples_button">Apples</string>
    <string name="uri_editText">https://developer.android.com</string>
    <string name="uri_button">Open Website</string>
    <string name="loc_editText">Golden Gate Bridge</string>
    <string name="loc_button">Open Location</string>
    <string name="share_editText">\'Twas brillig and the slithy toves</string>
    <string name="share_button">Share This Text</string>
    <string name="share_text_with">"Share this text with: "</string>
    <string name="uri_label">"URI: "</string>
    <string name="camera_button">Take a Picture</string>
    <string name="other_button">Other</string>
    <string name="hello_world_text">Hello World!</string>
    <string name="color_button">Change Color</string>
    <string name="unit_1_button">Unit 1</string>

    <string name="title_activity_unit2">Unit2Activity</string>
    <string name="unit_2_button">Unit 2</string>
    <string name="intro_text">Droid Desserts</string>
    <string name="donut_desc">temp donut description</string>
    <string name="icecream_desc">temp ice cream description</string>
    <string name="froyo_desc">temp froyo description</string>
    <string name="donut_order">You ordered a donut.</string>
    <string name="icecream_order">You ordered an ice cream sandwich.</string>
    <string name="froyo_order">You ordered a FroYo.</string>
    <string name="name_label">Name</string>
    <string name="name_hint">Enter your name</string>
    <string name="address_label">Address</string>
    <string name="address_hint">Enter address</string>
    <string name="phone_label">Phone</string>
    <string name="phone_hint">Enter phone</string>
    <string name="note_label">Note</string>
    <string name="note_hint">Enter note</string>
    <string name="delivery_label">Choose a delivery method:</string>
    <string name="sameDay">Same day messenger service</string>
    <string name="nextday">Next day ground delivery</string>
    <string name="pickup">Pick up</string>
    <string-array name="phone_spinner_array">
        <item>Home</item>
        <item>Work</item>
        <item>Mobile</item>
        <item>Other</item>
    </string-array>
    <string name="checkbox_1">One</string>
    <string name="checkbox_2">Two</string>
    <string name="checkbox_3">Three</string>
    <string name="checkbox_4">Four</string>
    <string name="checkbox_5">Five</string>
    <string name="show_toast_button">Show Toast</string>
    <string name="menu_order">Order</string>
    <string name="menu_status">Status</string>
    <string name="menu_favorites">Favorites</string>
    <string name="menu_contact">Contact</string>
    <string name="order_message">You selected Order.</string>
    <string name="status_message">You selected Status.</string>
    <string name="favorites_message">You selected Favorites.</string>
    <string name="contact_message">You selected Contact.</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_delete">Delete</string>
    <string name="edit_message">Edit choice clicked.</string>
    <string name="share_message">Share choice clicked.</string>
    <string name="delete_message">Delete choice clicked.</string>
    <string name="alert_test">Tap to test the alert:</string>
    <string name="alert_button">Alert</string>
    <string name="alert_title">Alert</string>
    <string name="alert_message">Click OK to continue, or Cancel to stop:</string>
    <string name="ok_button">OK</string>
    <string name="cancel_button">Cancel</string>
    <string name="ok_message">Pressed OK</string>
    <string name="cancel_message">Pressed Cancel</string>
    <string name="date_button">Date</string>
    <string name="datepicker_tag">datePicker</string>
    <string name="date_toast_format">Date: %d-%d-%d</string>
    <string name="time_test">Choose a time:</string>
    <string name="time_button">Time</string>
    <string name="timepicker_tag">timePicker</string>
    <string name="time_toast_format">Time %d:%d</string>
    <string name="order_activity_title">Order Activity</string>
    <string name="tab_test_button">Tab Test</string>
    <string name="tab1_message">Tab 1 message</string>
    <string name="tab2_message">Tab 2 message</string>
    <string name="tab3_message">Tab 3 message</string>
    <string name="tab1_label">Tab 1</string>
    <string name="tab2_label">Tab 2</string>
    <string name="tab3_label">Tab 3</string>

    <string name="title_activity_test_navigation_drawer">TestNavigationDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="operand_1_hint">Type Operand 1</string>
    <string name="operand_2_hint">Type Operand 2</string>
    <string name="add_button">Add</string>
    <string name="sub_button">Sub</string>
    <string name="div_button">Div</string>
    <string name="mul_button">Mul</string>
    <string name="pow_button">Pow</string>
    <string name="computationError">Error</string>
    <string name="title_activity_donut">DonutActivity</string>
    <string name="title_activity_ice_cream">IceCreamActivity</string>
    <string name="title_activity_froyo">FroyoActivity</string>
</resources>
