<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.testscreen.Unit2Activity">
    <item
        android:id="@+id/menu_contact"
        android:orderInCategory="100"
        android:title="@string/menu_contact"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_order"
        android:orderInCategory="10"
        android:title="@string/menu_order"
        android:icon="@drawable/ic_shopping_cart"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_status"
        android:orderInCategory="20"
        android:title="@string/menu_status"
        android:icon="@drawable/ic_status_info"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_favorites"
        android:orderInCategory="30"
        android:title="@string/menu_favorites"
        android:icon="@drawable/ic_favorites"
        app:showAsAction="ifRoom" />
</menu>